2021-02-07 Albert Chu <chu11@llnl.gov>

	* etc/: Update conf file permissions.

	* Globally fix a number of typos.

2021-02-06 Fabio Fantoni <fantonifabio@tiscali.it>

	* etc/: Update systemd service files permissions.

2020-09-30 Albert Chu <chu11@llnl.gov>

	* man/manpage-common-workaround-extra-text.man: Document that
	Supermicro boards don't work with IPMI 1.5.
	
2020-09-21 Albert Chu <chu11@llnl.gov>

	* man/ipmi-sel.8.pre.in: Fix typo

2020-09-03 Christian Ehrhardt <christian.ehrhardt@canonical.com>

	* libfreeipmi/locate/ipmi-locate-acpi-spmi.c
	(_ipmi_acpi_get_table_dev_mem): Fix segfault

2020-07-28 Albert Chu <chu11@llnl.gov>

	* man/freeipmi.conf.5.pre.in: Fix typo

2020-01-31 Albert Chu <chu11@llnl.gov>

	* ipmi-sensors: Remove legacy output support.

	* ipmi-sensors, ipmi-sel: Remove legacy output support.

	* man/ipmi-sensors.8.pre.in, man/ipmi-sel.8.pre.in,
	man/freeipmi.conf.5.pre.in: Remove legacy options.

	* man/manpage-common-legacy-output.man: Remove now unnecessary
	file.

	* ipmipower: Remove legacy options --ipmi-version (--driver-type
	since 0.7.1), --retry-wait-timeout (--retransmission-wait-timeout
	since 0.5.1), --retry-backoff-count
	(--retransmission-backoff-count since 0.5.1).

	* libfreeipmi/sel: Remove support of IPMI_SEL_STRING_FLAGS_LEGACY.
	The macro IPMI_SEL_STRING_FLAGS_LEGACY is no longer legal.

	* common/toolcommon/tool-cmdline-common.h,
	common/toolcommon/tool-cmdline-common.c: Remove many legacy
	command line options (--no-probing, --reg-space, --timeout,
	--retry-timeout, --auth-type, --privilege, --priv-level,
	--config).

	* ipmi-sensors: Remove legacy options (--sensors, --group,
	--groups, --sensor-type, --exclude-groups, --list-groups,
	--sensor-config-file).

	* ipmi-chassis: Remove legacy options (--get-capabilities,
	--get-status, --set-power-restore-policy, --set-power-cycle-interval,
	--set-boot-flags, --boot-type, --lock-out-reset-button, --blank-screen,